Update code after changes